# Inventory

./: CMakeCache.txt  CMakeLists.txt  Inventory.project  Inventory.workspace  Makefile  cmake_install.cmake
.codelite/: Inventory.session
src/: Connection.cpp  Customer.cpp  Employee.cpp  Order.cpp  Product.cpp  Supplier.cpp  Warehouse.cpp  menus.cpp
